feat: Add distribute modals for RP and Corruption

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,6 +3,7 @@
  */
 @import url('./shared/variables.css');
 @import url('./base.css');
+@import url('./distribute.css');
 @import url('./chip.css');
 @import url('./meter.css');
 @import url('./sidebar-header.css');
