--- a/src/templates/distribute.hbs
+++ b/src/templates/distribute.hbs
@@ -18,6 +18,6 @@
 		{{/each}}
 	</ul>
 	<footer>
-		<button type="submit" data-action="submit">Distribute</button>
+		<button type="submit" data-action="submit">{{localize 'ZWEI.partytab.distribute.main'}}</button>
 	</footer>
 </section>
