--- a/src/templates/party.hbs
+++ b/src/templates/party.hbs
@@ -146,7 +146,7 @@
   </ul>
   {{else}}
   <p class="empty">
-    No actors are currently in the party.
+    {{localize 'ZWEI.partytab.nomembers'}}
   </p>
   {{/if}}
 </section>
